Findbugs changes